--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     check-docker-code:
       docker:
       - image: python:3.7.3-stretch
-      working_directory: ~/project/
+      working_directory: ~/repo
       steps:
       - checkout
       - run:
