--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,9 @@ jobs:
             RESULT=$?
             if [ ${RESULT} -eq 0 ]
             then
-              return 1
+              echo "linting success"
             else
-              return 1
+              echo "linting failed"
             fi
 
 
