--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,31 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            make install
+      - run:
+          name: Lint the Dockerfile
+          command: |          
+            . venv/bin/activate
+            make lint
+            RESULT=$?
+            if [ ${RESULT} -eq 0 ]
+            then
+              echo "linting success"
+            else
+              echo "linting failed"
+            fi
+
+    push-docker-image-to-image-repo:
+      docker:
+      - image: python:3.7.3-stretch
+      working_directory: ~/repo
+      steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
             make install
       - run:
           name: FAIL lint on the Dockerfile
@@ -30,3 +55,6 @@ workflows:
   default:
     jobs:
       - linting-app-code
+      - push-docker-image-to-ecr:
+        requires:
+          - linting-app-code
