add the job to the workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,3 +46,6 @@ workflows:
   default:
     jobs:
       - linting-app-code
+      - push-docker-image-to-image-repo:
+          requires:
+            - linting-app-code
