--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           name: Upload the container to remote repo
           command: |          
             docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
-            docker tag $DOCKER_IMAGE_NAME $DOCKER_USERNAME/project5:$CIRCLE_WORKFLOW_ID
+            docker tag project5 $DOCKER_USERNAME/project5:$CIRCLE_WORKFLOW_ID
             docker push $DOCKERB_USERNAME/project5:$CIRCLE_WORKFLOW_ID
 
 workflows:
