--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,12 @@ jobs:
             docker image ls
       - run:
           name: Upload the container to remote repo
-          command: |          
-            docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
+          command: |
+            #login to docker        
+            docker login --username $DOCKER_USERNAME --password $DOCKER_ACCESS_TOKEN
+            #tag local image with unique circleci ID in prep for pushing to remote repo
             docker tag project5 $DOCKER_USERNAME/project5:$CIRCLE_WORKFLOW_ID
+            #push the image to docker repo
             docker push $DOCKER_USERNAME/project5:$CIRCLE_WORKFLOW_ID
 
 workflows:
