cluster name: regex pattern: [a-zA-Z][-a-zA-Z0-9]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
               $SUDO mv eksctl_download/eksctl /usr/local/bin/
               rmdir eksctl_download
         - aws-eks/create-cluster:
-            cluster-name: project5 cluster
+            cluster-name: project5Cluster
             skip-kubectl-install: false
             verbose: 3
             node-type: t2.micro
