--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
           install-kubectl: true
       - kubernetes/create-or-update-resource:
           get-rollout-status: true
-          resource-file-path: deployment/deployment.yml
+          resource-file-path: deployment.yml
           resource-name: deployment/project5
 
     test-new-cluster:
