--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
               $SUDO mv eksctl_download/eksctl /usr/local/bin/
               rmdir eksctl_download
         - aws-eks/create-cluster:
-            cluster-name: project5Cluster
+            cluster-name: project5Cluster1
             skip-kubectl-install: false
             verbose: 3
             node-type: t2.micro
@@ -92,7 +92,7 @@ jobs:
       - checkout
       - kubernetes/install
       - aws-eks/update-kubeconfig-with-authenticator:
-          cluster-name: project5Cluster
+          cluster-name: project5Cluster1
           install-kubectl: true
       - kubernetes/create-or-update-resource:
           get-rollout-status: true
@@ -130,7 +130,7 @@ workflows:
           requires:
             - create-eks-cluster
       - aws-eks/update-container-image:
-          cluster-name: project5Cluster
+          cluster-name: project5Cluster1
           container-image-updates: sritchie1305/project5:latest
           record: true
           requires:
