--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,15 +129,15 @@ workflows:
       - deploy-new-eks-cluster:
           requires:
             - create-eks-cluster
-      - aws-eks/update-container-image:
-          cluster-name: Cluster-$CIRCLE_WORKFLOW_ID
-          container-image-updates: sritchie1305/project5:latest
-          record: true
-          requires:
-            - deploy-new-eks-cluster
-          resource-name: deployment/project5
+      #- aws-eks/update-container-image:
+          #cluster-name: Cluster-$CIRCLE_WORKFLOW_ID
+          #container-image-updates: sritchie1305/project5:latest
+          #record: true
+          #requires:
+            #- deploy-new-eks-cluster
+          #resource-name: deployment/project5
       - test-new-cluster:
           requires:
-            - aws-eks/update-container-image
+            - deploy-new-eks-cluster
 
 
