--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,9 @@ jobs:
             #login to docker        
             docker login --username $DOCKER_USERNAME --password $DOCKER_ACCESS_TOKEN
             #tag local image with unique circleci ID in prep for pushing to remote repo
-            docker tag project5 $DOCKER_USERNAME/project5:$CIRCLE_WORKFLOW_ID
+            docker tag project5 $DOCKER_USERNAME/project5:${CIRCLE_WORKFLOW_ID:0:7}
             #push the image to docker repo
-            docker push $DOCKER_USERNAME/project5:$CIRCLE_WORKFLOW_ID
+            docker push $DOCKER_USERNAME/project5:${CIRCLE_WORKFLOW_ID:0:7}
     
     create-eks-cluster:
       executor: aws-eks/python3
@@ -79,7 +79,7 @@ jobs:
               $SUDO mv eksctl_download/eksctl /usr/local/bin/
               rmdir eksctl_download
         - aws-eks/create-cluster:
-            cluster-name: Cluster-$CIRCLE_WORKFLOW_ID
+            cluster-name: Cluster-${CIRCLE_WORKFLOW_ID:0:7}
             skip-kubectl-install: false
             verbose: 3
             node-type: t2.micro
@@ -94,7 +94,7 @@ jobs:
       - checkout
       - kubernetes/install
       - aws-eks/update-kubeconfig-with-authenticator:
-          cluster-name: Cluster-$CIRCLE_WORKFLOW_ID
+          cluster-name: Cluster-${CIRCLE_WORKFLOW_ID:0:7}
           install-kubectl: true
       - kubernetes/create-or-update-resource:
           get-rollout-status: false
@@ -106,7 +106,7 @@ jobs:
       steps:
         - kubernetes/install
         - aws-eks/update-kubeconfig-with-authenticator:
-            cluster-name: Cluster-$CIRCLE_WORKFLOW_ID
+            cluster-name: Cluster-${CIRCLE_WORKFLOW_ID:0:7}
         - run:
             name: check new cluster details
             command: |
@@ -132,8 +132,8 @@ workflows:
           requires:
             - create-eks-cluster
       - aws-eks/update-container-image:
-          cluster-name: Cluster-$CIRCLE_WORKFLOW_ID
-          container-image-updates: project5=sritchie1305/project5:$CIRCLE_WORKFLOW_ID
+          cluster-name: Cluster-${CIRCLE_WORKFLOW_ID:0:7}
+          container-image-updates: project5=sritchie1305/project5:latest
           record: true
           requires:
             - deploy-new-eks-cluster
