--- a/cluster.yml
+++ b/cluster.yml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: Cluster-$CIRCLE_WORKFLOW_ID
+  name: Cluster-${CIRCLE_WORKFLOW_ID:0:7}
   region: us-west-1
   tags:
     project: project5
@@ -11,7 +11,7 @@ iam:
   withOIDC: true
 
 nodeGroups:
-  - name: flask-$CIRCLE_WORKFLOW_ID
+  - name: flask-${CIRCLE_WORKFLOW_ID:0:7}
     instanceType: t2.small
     amiFamily: AmazonLinux2
     desiredCapacity: 1
@@ -20,4 +20,4 @@ nodeGroups:
     volumeSize: 80
     ssh:
       allow: true
-      publicKeyName: udacity
+      publicKeyName: P4VM
