--- a/deployment_1.yml
+++ b/deployment_1.yml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: crclci
+  name: project5
   labels:
-    app: crclci
+    app: project5
   namespace: default
 spec:
   selector:
     matchLabels:
-      app: crclci
+      app: project5
   replicas: 2
   strategy:
     rollingUpdate:
@@ -18,11 +18,11 @@ spec:
   template:
     metadata:
       labels:
-        app: crclci
+        app: project5
     spec:
       containers:
-      - name: crclci
-        image: sritchie1305/crclci
+      - name: project5
+        image: sritchie1305/project5:${CIRCLE_WORKFLOW_ID:0:7}
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -31,12 +31,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: crclci
+  name: project5
   labels:
-    name: crclci
+    name: project5
 spec:
   selector:
-    app: crclci
+    app: project5
   type: LoadBalancer
   ports:
     - name: http
