--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
             name:
             command: |
               if which eksctl > /dev/null; then
-              echo "eksctl is already installed"
+              echo "eksctl is installed"
               exit 0
               fi
               mkdir -p eksctl_download
