--- a/.circleci/config_working_workaround.yml
+++ b/.circleci/config_working_workaround.yml
@@ -32,7 +32,7 @@ jobs:
             else
               echo "linting failed"
             fi
-
+    # removed from workflow as circleci has a remote docker outage
     push-docker-image-to-image-repo:
       docker:
       - image: circleci/golang:1.15
@@ -66,7 +66,7 @@ jobs:
             name:
             command: |
               if which eksctl > /dev/null; then
-              echo "eksctl is already installed"
+              echo "eksctl is installed"
               exit 0
               fi
               mkdir -p eksctl_download
@@ -99,7 +99,7 @@ jobs:
       - kubernetes/create-or-update-resource:
           get-rollout-status: false
           resource-file-path: deployment.yml
-          resource-name: deployment/project5
+          resource-name: deployment/crclci
 
     test-new-cluster:
       executor: aws-eks/python3
@@ -122,24 +122,22 @@ workflows:
   default:
     jobs:
       - linting-app-code
-      - push-docker-image-to-image-repo:
-          requires:
-            - linting-app-code
-      - create-eks-cluster:
-          requires:
-            - push-docker-image-to-image-repo
+      #- push-docker-image-to-image-repo:
+          #requires:
+            #- linting-app-code
+      - create-eks-cluster
+          #requires:
+            #- push-docker-image-to-image-repo
       - deploy-new-eks-cluster:
           requires:
             - create-eks-cluster
       - aws-eks/update-container-image:
           cluster-name: Cluster-${CIRCLE_WORKFLOW_ID:0:7}
-          container-image-updates: project5=sritchie1305/project5:latest
+          container-image-updates: crclci=sritchie1305/crclci:latest
           record: true
           requires:
             - deploy-new-eks-cluster
-          resource-name: deployment/project5
+          resource-name: deployment/crclci
       - test-new-cluster:
           requires:
             - aws-eks/update-container-image
-
-
