--- a/deployment_working_workaround.yml
+++ b/deployment_working_workaround.yml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: project5
+  name: crclci
   labels:
-    app: project5
+    app: crclci
   namespace: default
 spec:
   selector:
     matchLabels:
-      app: project5
+      app: crclci
   replicas: 2
   strategy:
     rollingUpdate:
@@ -18,11 +18,11 @@ spec:
   template:
     metadata:
       labels:
-        app: project5
+        app: crclci
     spec:
       containers:
-      - name: project5
-        image: sritchie1305/project5:${CIRCLE_WORKFLOW_ID:0:7}
+      - name: crclci
+        image: sritchie1305/crclci
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -31,12 +31,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: project5
+  name: crclci
   labels:
-    name: project5
+    name: crclci
 spec:
   selector:
-    app: project5
+    app: crclci
   type: LoadBalancer
   ports:
     - name: http
