change AWS region to eu-west-2

--- a/cluster.yml
+++ b/cluster.yml
@@ -3,7 +3,7 @@ kind: ClusterConfig
 
 metadata:
   name: Cluster-${CIRCLE_WORKFLOW_ID:0:7}
-  region: us-west-1
+  region: eu-west-2
   tags:
     project: project5
 
