--- a/deployment.yml
+++ b/deployment.yml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: project5
-        image: sritchie1305/project5:${CIRCLE_WORKFLOW_ID:0:7}
+        image: sritchie1305/project5:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
