update workflow required fields

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,6 +140,6 @@ workflows:
           #resource-name: deployment/project5
       - test-new-cluster:
           requires:
-            - aws-eks/update-container-image
+            - deploy-new-eks-cluster
 
 
