docker push: latest fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             #tag local image with unique circleci ID in prep for pushing to remote repo
             docker tag project5 $DOCKER_USERNAME/project5:latest
             #push the image to docker repo
-            docker push $DOCKER_USERNAME/project5:${CIRCLE_WORKFLOW_ID:0:7},latest
+            docker push $DOCKER_USERNAME/project5:latest
     
     create-eks-cluster:
       executor: aws-eks/python3
