Add LB URL smoke test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 orbs:
   aws-eks: circleci/aws-eks@1.0.0
   kubernetes: circleci/kubernetes@0.11.1
+  docker: circleci/docker@1.6.0
 
 commands:
 
@@ -103,6 +104,7 @@ jobs:
 
     test-new-cluster:
       executor: aws-eks/python3
+      working_directory: /tmp/project5
       steps:
         - kubernetes/install
         - aws-eks/update-kubeconfig-with-authenticator:
@@ -114,6 +116,43 @@ jobs:
               kubectl get pods
               kubectl get deployment
               kubectl get nodes
+        - run:
+            name: add LB IP to text file
+            command: |
+              echo "$(kubectl get services project5 --output jsonpath='{.status.loadBalancer.ingress[0].hostname}')" > LB_IP.txt
+              cat LB_IP.txt
+        - persist_to_workspace:
+            root: /tmp/project5
+            paths:
+              - LB_IP.txt
+
+    test-LB-URL:
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - attach_workspace:
+            at: /tmp/project5
+      - run:
+          name: install dependencies
+          command: |
+            apk add --update curl
+      run:
+        name: smoke test app via LB IP
+        command: |
+          #Echo full URL in test
+          export URL="http://"$(cat /tmp/project5/LB_IP.txt)":8000"
+          echo $URL
+
+          #test URL
+          if curl ${URL} | grep "Steven"
+          then
+            echo "App online"
+            return 0
+          else
+            echo "App offline"
+            return 1
+          fi
 
 
 
@@ -134,5 +173,8 @@ workflows:
       - test-new-cluster:
           requires:
             - deploy-new-eks-cluster
+      - test-LB-URL:
+          requires:
+            - test-new-cluster
 
 
